--- a/index.html
+++ b/index.html
@@ -143,15 +143,15 @@
         save = $(img1).attr('src');
       }
 
-      $("#image2").click(function(){
+      $("#image2").dblclick(function(){
         TestSwitch('#image1', '#image2', '#imageh2');
       });
 
-      $("#image3").click(function(){
+      $("#image3").dblclick(function(){
         TestSwitch('#image1', '#image3', '#imageh3');
       });
 
-      $("#image4").click(function(){
+      $("#image4").dblclick(function(){
         TestSwitch('#image1', '#image4', '#imageh4');
       });
       
